add publick profile page and update the search (#89)
